--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
   box-sizing:border-box;  
 }
 body{
-    font-family: 'Roboto', sans-serif; 
+    font-family: 'Roboto', sans-serif;
+    background-image: url("images/patt.png"); 
 }
 .container{
     max-width: 1200px;
@@ -32,5 +33,6 @@ body{
     max-width: 50%;
 }
 .header{
-
+padding: 25px 0;
+background-color: rgba(255, 255, 255, 0.75);
 }
