--- a/style.css
+++ b/style.css
@@ -57,9 +57,26 @@ background-color: rgba(255, 255, 255, 0.75);
     justify-content: center;
     align-items: center;
     font-size:21px;
-    color: 
+    color: #2c71b8;
 }
 .menu a:hover{
     background-color: #2c71b8;
     color: white;
+}
+.search{
+    width: 200px;
+    height: 40px;
+    background-color: white;
+    color: #2c71b8;
+    background-image:url(images/icon\ \(1\).png);
+    border: 1px solid #2c71b8;
+}
+.search1{
+    border: none;
+    width: 150px;
+    height: 30px;
+    color: #2c71b8;
+}
+.search2{
+    
 }
